--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.11"
+		"astro": "^2.0.11",
+		"hast-util-select": "^5.0.5",
+		"rehype": "^12.0.1",
+		"rehype-add-classes": "^1.0.0",
+		"rehype-parse": "^8.0.4",
+		"rehype-stringify": "^9.0.3",
+		"rehype-wrap": "^1.1.0",
+		"unified": "^10.1.2",
+		"unist-util-visit": "^4.1.2"
 	}
 }
