--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/rss": "^2.1.1",
 		"astro": "^2.0.11",
 		"md5": "^2.3.0",
 		"rehype": "^12.0.1",
